; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/openjpeg/src/lib/openjp2/extr_t1.c_opj_t1_dec_clnpass.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/openjpeg/src/lib/openjp2/extr_t1.c_opj_t1_dec_clnpass.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32 }

@J2K_CCP_CBLKSTY_VSC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*, i32, i32)* @opj_t1_dec_clnpass to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @opj_t1_dec_clnpass(%struct.TYPE_8__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp eq i32 %9, 64
  br i1 %10, label %11, label %30

11:                                               ; preds = %3
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = icmp eq i32 %14, 64
  br i1 %15, label %16, label %30

16:                                               ; preds = %11
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @J2K_CCP_CBLKSTY_VSC, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @opj_t1_dec_clnpass_64x64_vsc(%struct.TYPE_8__* %22, i32 %23)
  br label %29

25:                                               ; preds = %16
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @opj_t1_dec_clnpass_64x64_novsc(%struct.TYPE_8__* %26, i32 %27)
  br label %29

29:                                               ; preds = %25, %21
  br label %44

30:                                               ; preds = %11, %3
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* @J2K_CCP_CBLKSTY_VSC, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %30
  %36 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @opj_t1_dec_clnpass_generic_vsc(%struct.TYPE_8__* %36, i32 %37)
  br label %43

39:                                               ; preds = %30
  %40 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %41 = load i32, i32* %5, align 4
  %42 = call i32 @opj_t1_dec_clnpass_generic_novsc(%struct.TYPE_8__* %40, i32 %41)
  br label %43

43:                                               ; preds = %39, %35
  br label %44

44:                                               ; preds = %43, %29
  %45 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %46 = load i32, i32* %6, align 4
  %47 = call i32 @opj_t1_dec_clnpass_check_segsym(%struct.TYPE_8__* %45, i32 %46)
  ret void
}

declare dso_local i32 @opj_t1_dec_clnpass_64x64_vsc(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @opj_t1_dec_clnpass_64x64_novsc(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @opj_t1_dec_clnpass_generic_vsc(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @opj_t1_dec_clnpass_generic_novsc(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @opj_t1_dec_clnpass_check_segsym(%struct.TYPE_8__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
